Update testing in new process